--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>hello</p>
-    <p>This in new feature for new branch </p>
+    <p>This in new feature for new branch (button)</p>
     
 </body>
 </html>
